# comptime

./: CMakeLists.txt
include/: make.hpp
include/comptime/: ct_factory.hpp  ct_initializer_list.hpp  ct_str.hpp  static_array.hpp  static_map.hpp  static_stack.hpp  static_string.hpp
test/: CMakeLists.txt  comptime_ctstr.cpp  comptime_static_array.cpp  comptime_static_map.cpp  comptime_static_stack.cpp  comptime_static_string.cpp
